--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,8 @@ coverage.xml
 
 # Django stuff:
 *.log
+loggers/*
+!loggers/.gitkeep
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -104,9 +106,9 @@ celerybeat.pid
 # Environments
 .venv
 */.env
-env/
+env/*.env
 venv/
-ENV/
+#ENV/
 env.bak/
 venv.bak/
 
